--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your talk?</q>
+        <q>Welcome to the <strong>MY SHOTS</strong> with <strong>stunning visualization</strong></q>
     </div>
 
     <!--
