--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
         
     -->
 
-    <div class="step slide" data-x="1000" data-y="-1500">
+    <div class="step" data-x="1000" data-y="-1500">
         <q style="color:black;"><strong><center><b>Hoo Hacks 2021</b></center></strong> <strong></strong></q>
     </span>
     <h1>
-        <div style = "position:relative; top:150px;">
+        <div style = "position:relative; top:0px;">
         <sup><center><p style="font-size:45px">By Benjamin Swerdlow, Jason Tellanoff, Danial Asaria, and Emily Jackson</p></center></sup>
         </div>
     </h1>
@@ -170,7 +170,7 @@
     </div>
 
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
-        <p>Tech Stack<b><img src="Tech Stack.png"> </b> <span class="thoughts"></span></p>
+        <p>Tech Stack<b><div><img src="Tech Stack.png" ></div> </b> <span class="thoughts"></span></p>
     </div>
 
     <!--
