change background colo

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <q style="color:black;"><strong><center><b>Hoo Hacks 2021</b></center></strong> <strong></strong></q>
     </span>
     <h1>
-        <div style = "position:relative; top:0px;">
+        <div style = "position:relative; top:150px;">
         <sup><center><p style="font-size:45px">By Benjamin Swerdlow, Jason Tellanoff, Danial Asaria, and Emily Jackson</p></center></sup>
         </div>
     </h1>
@@ -170,7 +170,8 @@
     </div>
 
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
-        <p>Tech Stack<b><div><img src="Tech Stack.png" ></div> </b> <span class="thoughts"></span></p>
+        <p>Tech Stack<b><div></div> </b> <span class="thoughts"></span></p>
+        <h1 style = "position:relative; top:0px; right:150px;"><img src="Tech Stack.png" ></h1>
     </div>
 
     <!--
