--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <p style="color:black;">Description</q></p>
         <p>MyShot is a <strong>revolutionary web app</strong> <br/>
         aimed to motivate Americans to get their vaccines
-        with a wide variety of rewards including  <strong>free doughnuts, rides, arcade tokens, popcorn, and even money.</strong></p>
+        with a wide variety of rewards including  <strong>free doughnuts, arcade tokens, popcorn, and even money.</strong></p>
     </div>
 
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
