--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
         <p>Tech Stack<b><div></div> </b> <span class="thoughts"></span></p>
-        <h1 style = "position:relative; top:0px; right:150px;"><img src="Tech Stack.png" ></h1>
+        <h1 style = "position:relative; top:0px; right:150px;"><img src="./Tech_Stack.png" ></h1>
     </div>
 
     <!--
